# Cargo-Tracker

./: Cargo Tracker Application.txt  README.md
Cargo Tracker App (files)/: AboutDialog.cpp  AboutDialog.h  Box.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Container.h  Cylinder.h  HelpDialog.cpp  HelpDialog.h  MainClient.cpp  MainClient.h  ManageTab.cpp  ManageTab.h  Memento.cpp  Memento.h  Pallet.cpp  Pallet.h  SerializationWorker.cpp  SerializationWorker.h  SerializeTab.cpp  SerializeTab.h  main.cpp  resources.qrc  widget.cpp  widget.h
Server (files)/: CMakeLists.txt  ContainerTableModel.h  ServerWindow.cpp  ServerWindow.h  main.cpp
